fix: fix known bugs
Signed-off-by: Hyshmily <cxm8607@outlook.com>